<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_add_tv">댓글달기</string>
    <string name="comment_report_tv">신고</string>
    <string name="post_writer_tv">글쓴이</string>
    <string name="post_date_tv">날짜</string>
    <string name="post_recommendation_tv">추천수</string>
    <string name="post_comment_et">댓글을 입력하세요.</string>
    <string name="post_comment_confirm_tv">등록</string>
    <string name="attach_picture_btn">사진 첨부</string>
    <string name="write_post_tv">게시</string>
    <string name="write_anonymous">익명으로 작성</string>
    <string name="login_title_tv">로그인</string>
    <string name="sign_up_tv">계정이 없으신가요?<font color="#A6DE57"> <u>회원가입</u></font></string>
    <string name="sign_up_title_tv">회원가입</string>
    <string name="next_btn">다음</string>
    <string name="sign_up_btn">회원가입하기</string>
    <string name="gallery_explain_et">게시판 설명</string>
</resources>