<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comment_writer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/comment_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/comment_writer_tv"
            app:layout_constraintTop_toBottomOf="@+id/comment_writer_tv" />

        <TextView
            android:id="@+id/comment_add_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/comment_add_tv"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/comment_time_tv"
            app:layout_constraintTop_toBottomOf="@+id/comment_content_tv" />

        <TextView
            android:id="@+id/comment_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/comment_content_tv"
            app:layout_constraintTop_toTopOf="@+id/comment_add_tv" />

        <TextView
            android:id="@+id/comment_report_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/comment_report_tv"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/comment_time_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/comment_delete_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="삭제"
            android:textColor="@color/colorRed"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/comment_report_tv"
            app:layout_constraintEnd_toStartOf="@+id/comment_report_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_reply_comment_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/dark_gray_border"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_comment_layout">

        <EditText
            android:id="@+id/post_reply_comment_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:focusable="true"
            android:gravity="top"
            android:hint="@string/post_comment_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_reply_comment_confirm_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="9dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/post_comment_confirm_tv"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_reply_comment_et" />

        <CheckBox
            android:id="@+id/comment_anonymous_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_anonymous"
            android:checked="true"
            app:layout_constraintStart_toStartOf="@+id/post_reply_comment_et"
            app:layout_constraintTop_toBottomOf="@+id/post_reply_comment_et" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>